--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,13 @@
 version: 0.2
-
 phases:
-  pre_build
+  pre_build:
     commands:
-      -npm install
-
+      - npm install
   build:
     commands:
-      -npm run build
-
-
+      - npm run build
 artifacts:
   files:
     - "**/*"
-    sicard-paths: no
-    base-directory: build 
-
+  discard-paths: no
+  base-directory: build
